# RockSatX-GHOST-software

./: .gitignore  CMakeLists.txt  README.md  bucketmanager.md
KFCFirmware/: KFCFirmware.ino
SSLFirmware/: CMakeLists.txt
SSLFirmware/Manager/: CMakeLists.txt
SSLFirmware/Manager/i2c_manager/: CMakeLists.txt  i2c_manager.c  i2c_manager.h
SSLFirmware/Sensors/: CMakeLists.txt
SSLFirmware/Sensors/BME280_Sensor/: BME280_Sensor.c  BME280_Sensor.h  CMakeLists.txt
SSLFirmware/Sensors/Fake_Sensor/: CMakeLists.txt
SSLFirmware/Sensors/Fake_Sensor/include/: Fake_Sensor.h
SSLFirmware/components/BME280_SensorAPI/: CMakeLists.txt
SSLFirmware/i2c_manager/: CMakeLists.txt
SSLFirmware/main/: BucketManager.c  BucketManager.cpp  BucketManager.h  CMakeLists.txt  Fake_Sensor.c  Kconfig.projbuild  SSLFirmware.c  SSLFirmware.cpp  config.h  i2c_manager.c  i2c_manager.h  main.c
SSLFirmware/main/Managers/: i2c_manager.c  i2c_manager.h
SSLFirmware/main/Managers/i2c_manager/: CMakeLists.txt  i2c_manager.c  i2c_manager.h
SSLFirmware/main/Sensors/: BME280_Sensor.c  CMakeLists.txt
SSLFirmware/main/Sensors/BME280_Sensor/: CMakeLists.txt
SSLFirmware/main/Sensors/Fake_Sensor/: CMakeLists.txt
SSLFirmware/main/Sensors/bme280/: bme280_i2c.c  bme280_i2c.h  bme280_sensor.c
SSLFirmware/main/Wrappers/: i2c_wrapper.c  i2c_wrapper.h
doc/: software-design.tex
src/: BucketManager.cpp  BucketManager.h
